--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8]
+        python-version: [3.8, 3.9, "3.10"]
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
@@ -18,7 +18,6 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          sudo apt-get install gfortran
           python -m pip install --upgrade pip
           pip install --no-cache-dir -U -r requirements.txt | cat
       - name: Check style
@@ -31,16 +30,3 @@ jobs:
           COVERALLS_PARALLEL: true
         run: |
           pytest -v --cov=fitbit --cov-report term-missing
-          coveralls --service=github
-  coveralls:
-    name: Finish coverage
-    needs: test
-    runs-on: ubuntu-latest
-    container: python:3-slim
-    steps:
-    - name: Finished
-      run: |
-        pip3 install --upgrade coveralls
-        coveralls --finish
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
